WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
11590
REGRESSION (
r17726
-
r17742
): Wikipedia page intermittently loads but doesn't render
https://bugs.webkit.org/show_bug.cgi?id=11590
Summary
REGRESSION (r17726-r17742): Wikipedia page intermittently loads but doesn't r...
mitz
Reported
2006-11-13 10:23:27 PST
From time to time, when loading a Wikipedia article, the page finishes loading, but nothing is rendered, or only the page background is rendered. The DOM Inspector works (and even sometimes even highlights "invisible" nodes no the page). Reloading often fixes the problem. The regression happened sometime between
r17726
and
r17742
, probably in
r17730
, the fix for
bug 10893
(InsertRule can not handle @import statements).
Attachments
First attempt
(1.47 KB, patch)
2006-11-13 12:27 PST
,
Rob Buis
no flags
Details
Formatted Diff
Diff
Test case
(2.35 KB, application/octet-stream)
2006-11-14 09:12 PST
,
mitz
no flags
Details
Improved patch
(1.47 KB, patch)
2006-11-15 10:08 PST
,
Rob Buis
no flags
Details
Formatted Diff
Diff
Improved patch
(7.78 KB, patch)
2006-11-15 12:01 PST
,
Rob Buis
no flags
Details
Formatted Diff
Diff
Testcase now has commetns
(8.77 KB, patch)
2006-11-16 04:45 PST
,
Rob Buis
beidson
: review+
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Matt Lilek
Comment 1
2006-11-13 10:27:47 PST
After the first couple page loads, this happens to me almost 100% of the time on Wikipedia and mysql.com
Rob Buis
Comment 2
2006-11-13 12:27:42 PST
Created
attachment 11507
[details]
First attempt Hi Matt, Does this patch fix the problem? Cheers, Rob.
Rob Buis
Comment 3
2006-11-13 12:52:20 PST
Hi, Note to any reviewers, I posted the same patch for 11591. Thnx to Mitz for pointing that out. Cheers, Rob. (In reply to
comment #2
)
> Created an attachment (id=11507) [edit] > First attempt > > Hi Matt, > > Does this patch fix the problem? > Cheers, > > Rob. >
Kevin M. Dean
Comment 4
2006-11-14 04:28:36 PST
I'm seeing the same/similar thing on
http://www.maccentral.com/
Article pages don't fully display, but go to the URL and press return and then it displays fine.
mitz
Comment 5
2006-11-14 09:12:16 PST
Created
attachment 11518
[details]
Test case
Rob Buis
Comment 6
2006-11-15 10:08:14 PST
Created
attachment 11527
[details]
Improved patch This patch should fix the regression, prevent the crash in 11591 and keep the functionality of
bug 10893
. Cheers, Rob.
Rob Buis
Comment 7
2006-11-15 12:01:33 PST
Created
attachment 11530
[details]
Improved patch D'oh I attached the wrong patch, this is the one I intended to attach. Cheers, Rob.
Rob Buis
Comment 8
2006-11-16 01:39:02 PST
Comment on
attachment 11530
[details]
Improved patch Should add comments first
Rob Buis
Comment 9
2006-11-16 04:45:08 PST
Created
attachment 11536
[details]
Testcase now has commetns As suggested by Mitz, some comments to go with the testcase. Cheers, Rob.
Chris Petersen
Comment 10
2006-11-16 11:57:41 PST
This is covered in <
rdar://problem/4841115
>.
Brady Eidson
Comment 11
2006-11-16 18:14:30 PST
Comment on
attachment 11536
[details]
Testcase now has commetns Looks good, methinks
Brady Eidson
Comment 12
2006-11-16 18:22:04 PST
Committed in
r17825
Next time, make sure you don't have any tabs ;)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug