LayoutTests:

Reviewed and landed by Brady

        Testcase for:
        http://bugs.webkit.org/show_bug.cgi?id=11590
        Bug 11590: REGRESSION (r17726-r17742): Wikipedia page intermittently loads but doesn't render

        * fast/css/import-rule-regression-11590-expected.txt: Added.
        * fast/css/import-rule-regression-11590.html: Added.
        * fast/css/resources/imports.css: Added.
        * fast/css/resources/style.css: Added.

WebCore:

        Reviewed and landed by Brady

        Fixes http://bugs.webkit.org/show_bug.cgi?id=11590 -
        REGRESSION (r17726-r17742): Wikipedia page intermittently loads but doesn't render
        Fix the regression by setting m_loadCompleted correctly.

        * css/CSSStyleSheet.cpp:
        (WebCore::CSSStyleSheet::checkLoaded):
        * dom/Node.h:
        (WebCore::Node::sheetLoaded):
        * dom/ProcessingInstruction.cpp:
        (WebCore::ProcessingInstruction::sheetLoaded):
        * dom/ProcessingInstruction.h:
        * html/HTMLLinkElement.cpp:
        (WebCore::HTMLLinkElement::sheetLoaded):
        * html/HTMLLinkElement.h:
        * html/HTMLStyleElement.cpp:
        (WebCore::HTMLStyleElement::sheetLoaded):
        * html/HTMLStyleElement.h:



Canonical link: https://commits.webkit.org/14990@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@17825 268f45cc-cd09-0410-ab3c-d52691b4dbfc