WebCore/html/HTMLLinkElement.cpp
@@ -235,10 +235,13 @@ bool HTMLLinkElement::isLoading() const
     return static_cast<CSSStyleSheet *>(m_sheet.get())->isLoading();
 }
 
-void HTMLLinkElement::sheetLoaded()
+bool HTMLLinkElement::sheetLoaded()
 {
-    if (!isLoading() && !isDisabled() && !isAlternate())
+    if (!isLoading() && !isDisabled() && !isAlternate()) {
         document()->stylesheetLoaded();
+        return true;
+    }
+    return false;
 }
 
 bool HTMLLinkElement::isURLAttribute(Attribute *attr) const
