WebCore/html/HTMLStyleElement.cpp
@@ -111,10 +111,13 @@ bool HTMLStyleElement::isLoading() const
     return static_cast<CSSStyleSheet *>(m_sheet.get())->isLoading();
 }
 
-void HTMLStyleElement::sheetLoaded()
+bool HTMLStyleElement::sheetLoaded()
 {
-    if (!isLoading())
+    if (!isLoading()) {
         document()->stylesheetLoaded();
+        return true;
+    }
+    return false;
 }
 
 bool HTMLStyleElement::disabled() const
