WebCore/html/HTMLStyleElement.h
@@ -47,7 +47,7 @@ public:
     virtual void childrenChanged();
 
     bool isLoading() const;
-    void sheetLoaded();
+    virtual bool sheetLoaded();
 
     bool disabled() const;
     void setDisabled(bool);
